Brands single page. Code refactoring

--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
 					<ol class="pages-list">
 						<li><a href="page-home.html">Главная страница</a></li>
 						<li><a href="page-brands.html">Производители</a></li>
+						<li><a href="page-brands-single.html">Производители: страница производителя</a></li>
 					</ol>
 				</div>
 				<div class="col-sm-6">
