--- a/app/page-brands.html
+++ b/app/page-brands.html
@@ -182,7 +182,7 @@
 				<h2 class="mb-32 text-xl">Бренды</h2>
 				<div class="brands-list row row-items-48 row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-xl-6">
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/1.png" alt="">
 							</div>
@@ -190,7 +190,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/2.png" alt="">
 							</div>
@@ -198,7 +198,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/3.png" alt="">
 							</div>
@@ -206,23 +206,23 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/4.png" alt="">
+							</div>
+							<span class="title">41ZERO42</span>
+						</a>
+					</div><!-- /.col -->
+					<div class="col">
+						<a href="page-brands-single.html" class="brands-item">
+							<div class="photo img-scale">
+								<img src="./images/brands/5.png" alt="">
 							</div>
 							<span class="title">ALELUIA CERAMICAS</span>
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
-							<div class="photo img-scale">
-								<img src="./images/brands/5.png" alt="">
-							</div>
-							<span class="title">LOVE CERAMIC TILES</span>
-						</a>
-					</div><!-- /.col -->
-					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/6.png" alt="">
 							</div>
@@ -230,7 +230,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/1.png" alt="">
 							</div>
@@ -238,7 +238,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/2.png" alt="">
 							</div>
@@ -246,7 +246,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/3.png" alt="">
 							</div>
@@ -254,23 +254,23 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/4.png" alt="">
+							</div>
+							<span class="title">41ZERO42</span>
+						</a>
+					</div><!-- /.col -->
+					<div class="col">
+						<a href="page-brands-single.html" class="brands-item">
+							<div class="photo img-scale">
+								<img src="./images/brands/5.png" alt="">
 							</div>
 							<span class="title">ALELUIA CERAMICAS</span>
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
-							<div class="photo img-scale">
-								<img src="./images/brands/5.png" alt="">
-							</div>
-							<span class="title">LOVE CERAMIC TILES</span>
-						</a>
-					</div><!-- /.col -->
-					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/6.png" alt="">
 							</div>
@@ -278,7 +278,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/1.png" alt="">
 							</div>
@@ -286,7 +286,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/2.png" alt="">
 							</div>
@@ -294,7 +294,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/3.png" alt="">
 							</div>
@@ -302,23 +302,23 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/4.png" alt="">
+							</div>
+							<span class="title">41ZERO42</span>
+						</a>
+					</div><!-- /.col -->
+					<div class="col">
+						<a href="page-brands-single.html" class="brands-item">
+							<div class="photo img-scale">
+								<img src="./images/brands/5.png" alt="">
 							</div>
 							<span class="title">ALELUIA CERAMICAS</span>
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="brands-item">
-							<div class="photo img-scale">
-								<img src="./images/brands/5.png" alt="">
-							</div>
-							<span class="title">LOVE CERAMIC TILES</span>
-						</a>
-					</div><!-- /.col -->
-					<div class="col">
-						<a href="#" class="brands-item">
+						<a href="page-brands-single.html" class="brands-item">
 							<div class="photo img-scale">
 								<img src="./images/brands/6.png" alt="">
 							</div>
@@ -329,7 +329,7 @@
 			</section>
 
 		</div><!-- /.container -->
-	</div><!-- /.page-catalog -->
+	</div><!-- /.page-brands -->
 
 </main>
 
