--- a/app/page-catalog-collections.html
+++ b/app/page-catalog-collections.html
@@ -45,7 +45,7 @@
 			<!-- Shop filters -->
 			@@include('parts/shop/shop-filters.html')
 
-			<!-- Products list -->
+			<!-- Collections list -->
 			<div class="row row-items-48 row-cols-1 row-cols-md-2 row-cols-xl-3">
 				<div class="col">
 					@@include('parts/collection-cards/collection-1.html')
