Search results page. Code refactoring

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
 					<h3 class="mb-20 text-md w-bold">Общие страницы</h3>
 					<ol class="pages-list">
 						<li><a href="page-home.html">Главная страница</a></li>
+						<li><a href="page-search.html">Результаты поиска</a></li>
 						<li><a href="page-brands.html">Производители</a></li>
 						<li><a href="page-brands-single.html">Производители: страница производителя</a></li>
 					</ol>
