Collection single page

--- a/app/page-brands-single.html
+++ b/app/page-brands-single.html
@@ -61,7 +61,7 @@
 								</div>
 								<div class="mt-16">
 									<button class="btn btn-more btn-more--show">
-										<span>Читать дальше</span>
+										<span>Подробнее</span>
 										<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
 									</button>
 									<button class="btn btn-more btn-more--hide">
@@ -74,12 +74,12 @@
 						<div class="col-md-auto order-0 order-md-1">
 							<div class="about-content-meta">
 								<div class="logo img-scale">
-									<img src="images/brands/4.png" alt="41ZERO42">
+									<img src="./images/brands/4.png" alt="41ZERO42">
 								</div>
 								<div class="download">
 									<a href="#" target="_blank" rel="noopener">
 										<span>Каталог продукции .pdf</span>
-										<img src="images/icons/pdf.svg" alt="Каталог продукции .pdf">
+										<img src="./images/icons/pdf.svg" alt="Каталог продукции .pdf">
 									</a>
 								</div>
 							</div>
