--- a/app/page-home.html
+++ b/app/page-home.html
@@ -13,23 +13,23 @@
 							<div class="h-heroes-photo img-cover">
 								<img src="./images/home-slide-01.jpg" alt="">
 							</div>
-						</div>
+						</div><!-- /.slide -->
 						<div class="swiper-slide">
 							<div class="h-heroes-photo img-cover">
 								<img src="./images/home-slide-02.jpg" alt="">
 							</div>
-						</div>
+						</div><!-- /.slide -->
 						<div class="swiper-slide">
 							<div class="h-heroes-photo img-cover">
 								<img src="./images/home-slide-01.jpg" alt="">
 							</div>
-						</div>
+						</div><!-- /.slide -->
 						<div class="swiper-slide">
 							<div class="h-heroes-photo img-cover">
 								<img src="./images/home-slide-02.jpg" alt="">
 							</div>
-						</div>
-					</div>
+						</div><!-- /.slide -->
+					</div><!-- /.swiper-wrapper -->
 					<!-- Slider navigation -->
 					<div class="h-heroes-slider-nav swiper-nav swiper-nav--secondary">
 						<button class="swiper-button-prev btn">
@@ -39,7 +39,7 @@
 							<svg class="icon icon-arrow-long"><use xlink:href="./images/symbol-defs.svg#arrow-long"></use></svg>
 						</button>
 					</div>
-				</div>
+				</div><!-- /.swiper-container -->
 				<!-- Slider dots -->
 				<div class="h-heroes-slider-dots swiper-dots">
 					<div class="swiper-pagination"></div>
@@ -427,7 +427,7 @@
 		<div class="container">
 			<div class="section-heading">
 				<h2 class="title">Популярные товары</h2>
-				<a href="page-catalog-products.html" class="btn btn-corner">Все товары</a>
+				<a href="page-products.html" class="btn btn-corner">Все товары</a>
 			</div>
 
 			<!-- Tabs -->
