--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
 			</div>
 			<div class="row row-items-24">
 				<div class="col-sm-6">
-					<h3 class="mb-20 text-md w-bold">Общие страницы</h3>
+					<h3 class="mb-16 text-md w-bold">Общие страницы</h3>
 					<ol class="pages-list">
 						<li><a href="page-home.html">Главная страница</a></li>
 						<li><a href="page-search.html">Результаты поиска</a></li>
@@ -64,11 +64,12 @@
 					</ol>
 				</div>
 				<div class="col-sm-6">
-					<h3 class="mb-20 text-md w-bold">Магазин</h3>
+					<h3 class="mb-16 text-md w-bold">Магазин</h3>
 					<ol class="pages-list">
 						<li><a href="page-catalog.html">Каталог</a></li>
-						<li><a href="page-catalog-collections.html">Категория: колекции</a></li>
-						<li><a href="page-catalog-products.html">Категория: товары</a></li>
+						<li><a href="page-collections.html">Категория: колекции</a></li>
+						<li><a href="page-products.html">Категория: товары</a></li>
+						<li><a href="page-collections-single.html">Колекция</a></li>
 					</ol>
 				</div>
 			</div>
