--- a/app/page-collections.html
+++ b/app/page-collections.html
@@ -35,10 +35,10 @@
 			<!-- Shop tabs -->
 			<div class="shop-tabs">
 				<div class="shop-tabs-item _current">
-					<a href="page-catalog-collections.html">Коллекции <span>2456</span></a>
+					<a href="page-collections.html">Коллекции <span>2456</span></a>
 				</div><!-- /.shop-tabs-item -->
 				<div class="shop-tabs-item">
-					<a href="page-catalog-products.html">Товары <span>32457</span></a>
+					<a href="page-products.html">Товары <span>32457</span></a>
 				</div><!-- /.shop-tabs-item -->
 			</div><!-- /.shop-tabs -->
 
