Collection single page: mobile responsive

--- a/app/index.html
+++ b/app/index.html
@@ -67,9 +67,9 @@
 					<h3 class="mb-16 text-md w-bold">Магазин</h3>
 					<ol class="pages-list">
 						<li><a href="page-catalog.html">Каталог</a></li>
-						<li><a href="page-collections.html">Категория: колекции</a></li>
-						<li><a href="page-products.html">Категория: товары</a></li>
-						<li><a href="page-collections-single.html">Колекция</a></li>
+						<li><a href="page-collections.html">Колекции</a></li>
+						<li><a href="page-products.html">Товары</a></li>
+						<li><a href="page-collections-single.html">Страница коллекции</a></li>
 					</ol>
 				</div>
 			</div>
