--- a/app/page-collections-single.html
+++ b/app/page-collections-single.html
@@ -38,7 +38,7 @@
 			<!-- Section: Content -->
 			<section class="collection-content">
 				<div class="row row-items-32">
-					<div class="col-8">
+					<div class="col-lg-7 col-xxl-8">
 
 						<!-- Gallery slideshow -->
 						<div class="gallery">
@@ -133,7 +133,7 @@
 						</div><!-- /.description -->
 
 					</div><!-- /.col -->
-					<div class="col-4">
+					<div class="col-lg-5 col-xxl-4">
 
 						<!-- Price -->
 						<div class="price">
@@ -144,7 +144,7 @@
 						<!-- Purchase form -->
 						<div class="purchase">
 							<form class="purchase-form form">
-								<button type="submit" class="btn btn-secondary btn-purchase _added">
+								<button type="submit" class="btn btn-secondary btn-purchase">
 									<div class="before-added">Заказать</div>
 									<div class="after-added">
 										<svg class="icon icon-checked"><use xlink:href="./images/symbol-defs.svg#checked"></use></svg>
@@ -278,7 +278,7 @@
 
 					<!-- Tab #1 -->
 					<div id="products-tab-1" class="tab-pane fade show active" role="tabpanel">
-						<div class="collection-products-list row row-items-24 row-cols-2 row-cols-md-3 row-cols-lg-4">
+						<div class="collection-products-list row row-items-24 row-cols-md-3 row-cols-lg-4">
 							<div class="col">
 								@@include('parts/product-cards/product-1.html')
 							</div><!-- /.col -->
