Product single page

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
 						<li><a href="page-collections.html">Колекции</a></li>
 						<li><a href="page-products.html">Товары</a></li>
 						<li><a href="page-collections-single.html">Страница коллекции</a></li>
+						<li><a href="page-products-single.html">Страница товара</a></li>
 					</ol>
 				</div>
 			</div>
