--- a/app/page-products-single.html
+++ b/app/page-products-single.html
@@ -12,11 +12,11 @@
 						<meta itemprop="position" content="0">
 					</li>
 					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
-						<a itemprop="item" href="page-collections.html"><span itemprop="name">Колекции</span></a>
+						<a itemprop="item" href="page-products.html"><span itemprop="name">Товары</span></a>
 						<meta itemprop="position" content="1">
 					</li>
 					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
-						<span itemprop="item"><span itemprop="name">Коллекция Effecto</span></span>
+						<span itemprop="item"><span itemprop="name">Керамогранит Kerama Marazzi 60х119,5</span></span>
 						<meta itemprop="position" content="2">
 					</li>
 				</ul>
@@ -25,21 +25,21 @@
 	</div><!-- /.page-heading -->
 
 	<!-- Page content -->
-	<div class="page-single-collection">
+	<div class="page-single-product">
 		<div class="container">
 
 			<!-- Section: Heading -->
-			<section class="collection-heading">
-				<h1 class="title text-xxl">Коллекция Effecto</h1>
+			<section class="product-heading">
+				<h1 class="title text-xxl">Керамогранит Kerama Marazzi 60х119,5</h1>
 				<sup class="in-stock">В наличии</sup>
 				<!-- <sup class="out-of-stock">Нет в наличии</sup> -->
 			</section>
 
 			<!-- Section: Content -->
-			<section class="collection-content">
+			<section class="product-content">
 				<div class="row row-items-32">
 
-					<div class="col-lg-7 col-xxl-8">
+					<div class="col-lg-6 col-xl-7 col-xxl-5 order-0">
 
 						<!-- Gallery slideshow -->
 						<div class="gallery">
@@ -49,35 +49,35 @@
 								<div class="swiper-container">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
-											<div class="gallery-photo img-cover">
-												<a href="./images/home-slide-01.jpg" data-fancybox="collection-gallery" class="gallery-photo-zoom">
+											<div class="gallery-photo img-scale">
+												<a href="./images/products/3.jpg" data-fancybox="collection-gallery" class="gallery-photo-zoom">
 													<span><svg class="icon icon-plus"><use xlink:href="./images/symbol-defs.svg#plus"></use></svg></span>
 												</a>
-												<img src="./images/home-slide-01.jpg" alt="">
+												<img src="./images/products/3.jpg" alt="">
 											</div>
 										</div><!-- /.slide -->
 										<div class="swiper-slide">
-											<div class="gallery-photo img-cover">
-												<a href="./images/home-slide-02.jpg" data-fancybox="collection-gallery" class="gallery-photo-zoom">
+											<div class="gallery-photo img-scale">
+												<a href="./images/products/1.jpg" data-fancybox="collection-gallery" class="gallery-photo-zoom">
 													<span><svg class="icon icon-plus"><use xlink:href="./images/symbol-defs.svg#plus"></use></svg></span>
 												</a>
-												<img src="./images/home-slide-02.jpg" alt="">
+												<img src="./images/products/1.jpg" alt="">
 											</div>
 										</div><!-- /.slide -->
 										<div class="swiper-slide">
-											<div class="gallery-photo img-cover">
-												<a href="./images/home-slide-01.jpg" data-fancybox="collection-gallery" class="gallery-photo-zoom">
+											<div class="gallery-photo img-scale">
+												<a href="./images/products/2.jpg" data-fancybox="collection-gallery" class="gallery-photo-zoom">
 													<span><svg class="icon icon-plus"><use xlink:href="./images/symbol-defs.svg#plus"></use></svg></span>
 												</a>
-												<img src="./images/home-slide-01.jpg" alt="">
+												<img src="./images/products/2.jpg" alt="">
 											</div>
 										</div><!-- /.slide -->
 										<div class="swiper-slide">
-											<div class="gallery-photo img-cover">
-												<a href="./images/home-slide-02.jpg" data-fancybox="collection-gallery" class="gallery-photo-zoom">
+											<div class="gallery-photo img-scale">
+												<a href="./images/products/4.jpg" data-fancybox="collection-gallery" class="gallery-photo-zoom">
 													<span><svg class="icon icon-plus"><use xlink:href="./images/symbol-defs.svg#plus"></use></svg></span>
 												</a>
-												<img src="./images/home-slide-02.jpg" alt="">
+												<img src="./images/products/4.jpg" alt="">
 											</div>
 										</div><!-- /.slide -->
 									</div><!-- /.swiper-wrapper -->
@@ -98,16 +98,16 @@
 								<div class="swiper-container">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
-											<img src="./images/home-slide-01.jpg" alt="">
+											<img src="./images/products/3.jpg" alt="">
 										</div><!-- /.slide -->
 										<div class="swiper-slide">
-											<img src="./images/home-slide-02.jpg" alt="">
+											<img src="./images/products/1.jpg" alt="">
 										</div><!-- /.slide -->
 										<div class="swiper-slide">
-											<img src="./images/home-slide-01.jpg" alt="">
+											<img src="./images/products/2.jpg" alt="">
 										</div><!-- /.slide -->
 										<div class="swiper-slide">
-											<img src="./images/home-slide-02.jpg" alt="">
+											<img src="./images/products/4.jpg" alt="">
 										</div><!-- /.slide -->
 									</div><!-- /.swiper-wrapper -->
 								</div><!-- /.swiper-container -->
@@ -115,64 +115,21 @@
 
 						</div><!-- /.gallery -->
 
-						<!-- Description -->
-						<div class="description readmore">
-							<div class="description-text readmore-list">
-								<p>Название фабрики 41ZERO42 — не что иное, как почтовый индекс Фьорано-Моденезе — города в Италии, располагающимся в знаменитом керамическом регионе Эмилия-Романья (Модена). Молодая амбициозная команда, объединенная общими интересами, убеждена, что для того, чтобы сделать что-то стимулирующее, нам нужно искать вдохновение как внутри наших собственных границ, так и вне их.</p>
-								<p>Название фабрики 41ZERO42 — не что иное, как почтовый индекс Фьорано-Моденезе — города в Италии, располагающимся в знаменитом керамическом регионе Эмилия-Романья (Модена). Молодая амбициозная команда, объединенная общими интересами, убеждена, что для того, чтобы сделать что-то стимулирующее, нам нужно искать вдохновение как внутри наших собственных границ, так и вне их. Большое значение при разработке керамической плитки 41zero42 придается концепции трансверсальности между коллекциями, чтобы подчеркнуть лучший способ выразить интегрированный проект.</p>
-							</div>
-							<div class="mt-16">
-								<button class="btn btn-more btn-more--show">
-									<span>Подробнее</span>
-									<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
-								</button>
-								<button class="btn btn-more btn-more--hide">
-									<span>Скрыть</span>
-									<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
-								</button>
-							</div>
-						</div><!-- /.description -->
-
 					</div><!-- /.col -->
 
-					<div class="col-lg-5 col-xxl-4">
-
-						<!-- Price -->
-						<div class="price">
-							<div class="price-label">Цена от:</div>
-							<div class="price-value"><span>4500</span> ₽</div>
-						</div>
-
-						<!-- Purchase form -->
-						<div class="purchase">
-							<form class="purchase-form form">
-								<button type="submit" class="btn btn-secondary btn-purchase">
-									<div class="before-added">Заказать</div>
-									<div class="after-added">
-										<svg class="icon icon-checked"><use xlink:href="./images/symbol-defs.svg#checked"></use></svg>
-										<span>Товар добавлен в <a href="#">корзину</a></span>
-									</div>
-								</button>
-							</form>
-						</div>
-
-						<!-- Quick order -->
-						<div class="quickorder">
-							<form class="quickorder-form form">
-								<div class="quickorder-form-wrapper">
-									<input type="tel" class="form-control" placeholder="+7 (___) ___ __ __" minlength="11" autocomplete="off" required>
-									<button type="submit" class="btn btn-outline">Заказать в один клик</button>
-								</div>
-								<div class="form-checkbox form-checkbox-sm switch-input-mask">
-									<input type="checkbox" id="callback-form-phone-mask" checked>
-									<label for="callback-form-phone-mask" class="form-checkbox-label">Показать маску ввода телефона</label>
-								</div>
-							</form>
-						</div>
+					<div class="col-xxl-3 order-2 order-xxl-1">
 
 						<!-- Attributes -->
 						<table class="attributes table-attributes">
 							<tbody>
+								<tr>
+									<td class="attribute">Фабрика::</td>
+									<td class="value"><a href="#">Concorde Russia</a></td>
+								</tr>
+								<tr>
+									<td class="attribute">Коллекция:</td>
+									<td class="value"><a href="#">Mediterranea / Медитеррия</a></td>
+								</tr>
 								<tr>
 									<td class="attribute">Код:</td>
 									<td class="value">0534625</td>
@@ -209,8 +166,61 @@
 									<td class="attribute">Геометрическая форма:</td>
 									<td class="value">Квадрат, Прямоугольник</td>
 								</tr>
+								<tr>
+									<td class="attribute">Материал:</td>
+									<td class="value">Керамогранит</td>
+								</tr>
 							</tbody>
 						</table>
+
+					</div><!-- /.col -->
+
+					<div class="col-lg-6 col-xl-5 col-xxl-4 order-1 order-xxl-2">
+
+						<!-- Purchase form -->
+						<div class="purchase">
+							<form class="purchase-form form">
+								<div class="price">
+									<div class="price-main">
+										<div class="label">Цена:</div>
+										<div class="value"><span>4500</span> ₽/м<sup>2</sup></div>
+									</div>
+									<div class="price-quantity">
+										<div class="quantity">
+											<button type="button" class="quantity-minus btn btn-primary">
+												<svg class="icon icon-minus"><use xlink:href="images/symbol-defs.svg#minus"></use></svg>
+											</button>
+											<div class="quantity-amount"><div class="value">1.467</div> <div class="size">м<sup>2</sup></div></div>
+											<button type="button" class="quantity-plus btn btn-primary">
+												<svg class="icon icon-plus"><use xlink:href="images/symbol-defs.svg#plus"></use></svg>
+											</button>
+											<input type="text" name="quantity" hidden>
+										</div>
+									</div>
+								</div>
+								<button type="submit" class="btn btn-secondary btn-purchase">
+									<div class="before-added">Заказать</div>
+									<div class="after-added">
+										<svg class="icon icon-checked"><use xlink:href="./images/symbol-defs.svg#checked"></use></svg>
+										<span>Товар добавлен в <a href="#">корзину</a></span>
+									</div>
+								</button>
+							</form>
+						</div>
+
+						<!-- Quick order -->
+						<div class="quickorder">
+							<form class="quickorder-form form">
+								<div class="quickorder-form-wrapper">
+									<input type="tel" class="form-control" placeholder="+7 (___) ___ __ __" minlength="11" autocomplete="off" required>
+									<button type="submit" class="btn btn-outline">Заказать в один клик</button>
+								</div>
+								<div class="form-checkbox form-checkbox-sm switch-input-mask">
+									<input type="checkbox" id="callback-form-phone-mask" checked>
+									<label for="callback-form-phone-mask" class="form-checkbox-label">Показать маску ввода телефона</label>
+								</div>
+							</form>
+						</div>
 
 						<!-- Advantages -->
 						<div class="advantages">
@@ -257,15 +267,37 @@
 
 					</div><!-- /.col -->
 
+					<div class="col-lg-9 col-xxl-8 order-3">
+
+						<!-- Description -->
+						<div class="description readmore">
+							<div class="description-text readmore-list">
+								<p>Название фабрики 41ZERO42 — не что иное, как почтовый индекс Фьорано-Моденезе — города в Италии, располагающимся в знаменитом керамическом регионе Эмилия-Романья (Модена). Молодая амбициозная команда, объединенная общими интересами, убеждена, что для того, чтобы сделать что-то стимулирующее, нам нужно искать вдохновение как внутри наших собственных границ, так и вне их.</p>
+								<p>Название фабрики 41ZERO42 — не что иное, как почтовый индекс Фьорано-Моденезе — города в Италии, располагающимся в знаменитом керамическом регионе Эмилия-Романья (Модена). Молодая амбициозная команда, объединенная общими интересами, убеждена, что для того, чтобы сделать что-то стимулирующее, нам нужно искать вдохновение как внутри наших собственных границ, так и вне их. Большое значение при разработке керамической плитки 41zero42 придается концепции трансверсальности между коллекциями, чтобы подчеркнуть лучший способ выразить интегрированный проект.</p>
+							</div>
+							<div class="mt-16">
+								<button class="btn btn-more btn-more--show">
+									<span>Подробнее</span>
+									<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
+								</button>
+								<button class="btn btn-more btn-more--hide">
+									<span>Скрыть</span>
+									<svg class="icon icon-arrow-dropdown"><use xlink:href="./images/symbol-defs.svg#arrow-dropdown"></use></svg>
+								</button>
+							</div>
+						</div><!-- /.description -->
+
+					</div><!-- /.col -->
+
 				</div><!-- /.row -->
 			</section><!-- /.collection-content -->
 
 			<!-- Section: Collection products -->
-			<section class="collection-products mt-60">
-				<h2 class="mb-32 text-xl">Товары из коллекции</h2>
+			<section class="product-products mt-60">
+				<h2 class="mb-32 text-xl">Еще товары из коллекции</h2>
 
 				<!-- Tabs -->
-				<div class="collection-products-tabs">
+				<div class="product-products-tabs">
 					<div class="nav nav-tabs" role="tablist">
 						<a href="#products-tab-1" class="nav-link active" data-toggle="tab" role="tab">Вся плитка</a>
 						<a href="#products-tab-2" class="nav-link" data-toggle="tab" role="tab">Плитка для ванной</a>
@@ -281,7 +313,7 @@
 
 					<!-- Tab #1 -->
 					<div id="products-tab-1" class="tab-pane fade show active" role="tabpanel">
-						<div class="collection-products-list row row-items-24 row-cols-md-3 row-cols-lg-4">
+						<div class="product-products-list row row-items-24 row-cols-md-3 row-cols-lg-4">
 							<div class="col">
 								@@include('parts/product-cards/product-1.html')
 							</div><!-- /.col -->
@@ -314,7 +346,7 @@
 
 					<!-- Tab #2 -->
 					<div id="products-tab-2" class="tab-pane fade" role="tabpanel">
-						<div class="collection-products-list row row-items-24 row-cols-2 row-cols-md-3 row-cols-lg-4">
+						<div class="product-products-list row row-items-24 row-cols-2 row-cols-md-3 row-cols-lg-4">
 							<div class="col">
 								@@include('parts/product-cards/product-2.html')
 							</div><!-- /.col -->
