--- a/app/page-catalog.html
+++ b/app/page-catalog.html
@@ -30,7 +30,7 @@
 				<h2 class="mb-32 text-xl">Плитка</h2>
 				<div class="row row-items-32 row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 row-cols-xl-6">
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/1.jpg" alt="">
 							</div>
@@ -38,7 +38,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/2.jpg" alt="">
 							</div>
@@ -46,7 +46,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/3.jpg" alt="">
 							</div>
@@ -54,7 +54,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/4.jpg" alt="">
 							</div>
@@ -68,7 +68,7 @@
 				<h2 class="mb-32 text-xl">Плитка для ванной</h2>
 				<div class="row row-items-32 row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 row-cols-xl-6">
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/1.jpg" alt="">
 							</div>
@@ -76,7 +76,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/2.jpg" alt="">
 							</div>
@@ -84,7 +84,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/3.jpg" alt="">
 							</div>
@@ -92,7 +92,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/4.jpg" alt="">
 							</div>
@@ -100,7 +100,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/5.jpg" alt="">
 							</div>
@@ -108,7 +108,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/6.jpg" alt="">
 							</div>
@@ -116,7 +116,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/6.jpg" alt="">
 							</div>
