--- a/app/parts/collection-cards/collection-2.html
+++ b/app/parts/collection-cards/collection-2.html
@@ -8,12 +8,12 @@
 			</a>
 			<a href="./images/collections/4.jpg" data-fancybox="collection-gallery-2"></a>
 		</div>
-		<a href="#">
+		<a href="page-collection.html">
 			<img src="./images/collections/2.jpg" alt="">
 		</a>
 	</div>
 	<div class="card-meta">
-		<a href="#" class="permalink">CHARME ADVANCE FLOOR PROJECT</a>
+		<a href="page-collection.html" class="permalink">CHARME ADVANCE FLOOR PROJECT</a>
 		<div class="product-country">
 			<span>Italon,</span>
 			<img src="./images/flags/011-italy.svg" alt="Италия">
