--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -145,37 +145,37 @@
 								<div class="search-results-categories">
 									<span class="cats-title mb-8">Категории</span>
 									<div class="cats-list">
-										<a href="#" class="cats-item">
+										<a href="page-catalog.html" class="cats-item">
 											<div class="photo img-cover">
 												<img src="./images/collections/1.jpg" alt="">
 											</div>
 											<div class="title">Настенная</div>
 										</a>
-										<a href="#" class="cats-item">
+										<a href="page-catalog.html" class="cats-item">
 											<div class="photo img-cover">
 												<img src="./images/collections/2.jpg" alt="">
 											</div>
 											<div class="title">Напольная</div>
 										</a>
-										<a href="#" class="cats-item">
+										<a href="page-catalog.html" class="cats-item">
 											<div class="photo img-cover">
 												<img src="./images/collections/3.jpg" alt="">
 											</div>
 											<div class="title">Мозаика</div>
 										</a>
-										<a href="#" class="cats-item">
+										<a href="page-catalog.html" class="cats-item">
 											<div class="photo img-cover">
 												<img src="./images/collections/4.jpg" alt="">
 											</div>
 											<div class="title">Бежевая</div>
 										</a>
-										<a href="#" class="cats-item">
+										<a href="page-catalog.html" class="cats-item">
 											<div class="photo img-cover">
 												<img src="./images/collections/5.jpg" alt="">
 											</div>
 											<div class="title">Серая</div>
 										</a>
-										<a href="#" class="cats-item">
+										<a href="page-catalog.html" class="cats-item">
 											<div class="photo img-cover">
 												<img src="./images/collections/6.jpg" alt="">
 											</div>
@@ -186,7 +186,7 @@
 								<div class="search-results-products">
 									<span class="products-title mb-8">Товары</span>
 									<div class="products-list">
-										<a href="#" class="products-item">
+										<a href="page-product.html" class="products-item">
 											<div class="photo zoom-photo img-cover">
 												<img src="./images/products/1.jpg" alt="">
 											</div>
@@ -200,7 +200,7 @@
 											</div>
 											<div class="product-price text-lg">16 950 ₽</div>
 										</a>
-										<a href="#" class="products-item">
+										<a href="page-product.html" class="products-item">
 											<div class="photo zoom-photo img-cover">
 												<img src="./images/products/2.jpg" alt="">
 											</div>
@@ -216,7 +216,7 @@
 										</a>
 									</div><!-- /.products-list -->
 									<div class="mt-16">
-										<a href="#" class="link-arrow">Все результаты <svg class="icon icon-arrow-small"><use xlink:href="./images/symbol-defs.svg#arrow-small"></use></svg></a>
+										<a href="page-search.html" class="link-arrow">Все результаты <svg class="icon icon-arrow-small"><use xlink:href="./images/symbol-defs.svg#arrow-small"></use></svg></a>
 									</div>
 								</div><!-- /.search-results-products -->
 							</div><!-- /.search-results-wrapper -->
@@ -517,7 +517,7 @@
 
 				<!-- Brands alphabet -->
 				<div class="brands">
-					<a href="#" class="brands-all">
+					<a href="page-brands.html" class="brands-all">
 						<span>Все производители</span>
 						<svg class="icon icon-arrow-small"><use xlink:href="./images/symbol-defs.svg#arrow-small"></use></svg>
 					</a>
