--- a/app/parts/shop/shop-subcategories.html
+++ b/app/parts/shop/shop-subcategories.html
@@ -9,7 +9,7 @@
 			</a>
 		</div><!-- /.col -->
 		<div class="col">
-			<a href="#" class="shop-categories-item">
+			<a href="#" class="shop-categories-item _is-active">
 				<div class="photo img-cover">
 					<img src="./images/collections/2.jpg" alt="">
 				</div>
