--- a/app/index.html
+++ b/app/index.html
@@ -69,8 +69,8 @@
 						<li><a href="page-catalog.html">Каталог</a></li>
 						<li><a href="page-collections.html">Колекции</a></li>
 						<li><a href="page-products.html">Товары</a></li>
-						<li><a href="page-collections-single.html">Страница коллекции</a></li>
-						<li><a href="page-products-single.html">Страница товара</a></li>
+						<li><a href="page-collection.html">Страница коллекции</a></li>
+						<li><a href="page-product.html">Страница товара</a></li>
 					</ol>
 				</div>
 			</div>
