--- a/app/page-search.html
+++ b/app/page-search.html
@@ -30,7 +30,7 @@
 				<h2 class="mb-32 text-400 text-sm">Категории</h2>
 				<div class="row row-items-32 row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 row-cols-xl-6">
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/1.jpg" alt="">
 							</div>
@@ -38,7 +38,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/2.jpg" alt="">
 							</div>
@@ -46,7 +46,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/3.jpg" alt="">
 							</div>
@@ -54,7 +54,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col">
-						<a href="#" class="category">
+						<a href="page-collections.html" class="category">
 							<div class="category-photo img-cover">
 								<img src="./images/categories/4.jpg" alt="">
 							</div>
