--- a/app/parts/product-cards/product-1.html
+++ b/app/parts/product-cards/product-1.html
@@ -1,12 +1,12 @@
 <div class="card card-product">
 	<div class="card-shadow"></div>
 	<div class="card-photo zoom-photo">
-		<a href="#">
+		<a href="page-product.html">
 			<img src="./images/products/3.jpg" alt="">
 		</a>
 	</div>
 	<div class="card-meta">
-		<a href="#" class="permalink">Керамогранит Italon Класс Блэк 45x45</a>
+		<a href="page-product.html" class="permalink">Керамогранит Italon Класс Блэк 45x45</a>
 		<div class="product-country">
 			<span>Italon,</span>
 			<img src="./images/flags/228-russia.svg" alt="Россия">
