Cart (checkout)  page.

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
 						<li><a href="page-products.html">Товары</a></li>
 						<li><a href="page-collection.html">Страница коллекции</a></li>
 						<li><a href="page-product.html">Страница товара</a></li>
+						<li><a href="page-cart.html">Корзина и оформление</a></li>
 					</ol>
 				</div>
 			</div>
