--- a/app/page-collection.html
+++ b/app/page-collection.html
@@ -333,7 +333,7 @@
 			</section><!-- /.collection-products -->
 
 		</div><!-- /.container -->
-	</div><!-- /.page-single-brands -->
+	</div><!-- /.page-single-collection -->
 
 	<!-- Calculation project form -->
 	@@include('parts/calculation-project.html')
