--- a/app/page-product.html
+++ b/app/page-product.html
@@ -365,7 +365,7 @@
 			</section><!-- /.collection-products -->
 
 		</div><!-- /.container -->
-	</div><!-- /.page-single-brands -->
+	</div><!-- /.page-single-product -->
 
 	<!-- Calculation project form -->
 	@@include('parts/calculation-project.html')
