--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -247,7 +247,7 @@
 					</div><!-- /.contacts -->
 
 					<div class="col-auto align-self-center cart">
-						<a href="#" class="cart-link">
+						<a href="page-cart.html" class="cart-link">
 							<div class="cart-icon">
 								<svg class="icon icon-cart"><use xlink:href="./images/symbol-defs.svg#cart"></use></svg>
 							</div>
