--- a/app/parts/mobile-menu.html
+++ b/app/parts/mobile-menu.html
@@ -12,7 +12,7 @@
 		<div class="mmenu-main">
 
 			<div class="cart">
-				<a href="#" class="cart-link">
+				<a href="page-cart.html" class="cart-link">
 					<div class="cart-icon">
 						<svg class="icon icon-cart"><use xlink:href="./images/symbol-defs.svg#cart"></use></svg>
 					</div>
