--- a/app/page-cart.html
+++ b/app/page-cart.html
@@ -62,11 +62,11 @@
 						<div class="cart-item-body count" data-title="Количество">
 							<div class="quantity">
 								<button type="button" class="quantity-minus btn btn-primary">
-									<svg class="icon icon-minus"><use xlink:href="images/symbol-defs.svg#minus"></use></svg>
+									<svg class="icon icon-minus"><use xlink:href="./images/symbol-defs.svg#minus"></use></svg>
 								</button>
 								<div class="quantity-amount"><div class="value">1.467</div></div>
 								<button type="button" class="quantity-plus btn btn-primary">
-									<svg class="icon icon-plus"><use xlink:href="images/symbol-defs.svg#plus"></use></svg>
+									<svg class="icon icon-plus"><use xlink:href="./images/symbol-defs.svg#plus"></use></svg>
 								</button>
 								<input type="text" name="quantity" hidden>
 							</div>
@@ -103,11 +103,11 @@
 						<div class="cart-item-body count" data-title="Количество">
 							<div class="quantity">
 								<button type="button" class="quantity-minus btn btn-primary">
-									<svg class="icon icon-minus"><use xlink:href="images/symbol-defs.svg#minus"></use></svg>
+									<svg class="icon icon-minus"><use xlink:href="./images/symbol-defs.svg#minus"></use></svg>
 								</button>
 								<div class="quantity-amount"><div class="value">1.194</div></div>
 								<button type="button" class="quantity-plus btn btn-primary">
-									<svg class="icon icon-plus"><use xlink:href="images/symbol-defs.svg#plus"></use></svg>
+									<svg class="icon icon-plus"><use xlink:href="./images/symbol-defs.svg#plus"></use></svg>
 								</button>
 								<input type="text" name="quantity" hidden>
 							</div>
@@ -144,11 +144,11 @@
 						<div class="cart-item-body count" data-title="Количество">
 							<div class="quantity">
 								<button type="button" class="quantity-minus btn btn-primary">
-									<svg class="icon icon-minus"><use xlink:href="images/symbol-defs.svg#minus"></use></svg>
+									<svg class="icon icon-minus"><use xlink:href="./images/symbol-defs.svg#minus"></use></svg>
 								</button>
 								<div class="quantity-amount"><div class="value">1.688</div></div>
 								<button type="button" class="quantity-plus btn btn-primary">
-									<svg class="icon icon-plus"><use xlink:href="images/symbol-defs.svg#plus"></use></svg>
+									<svg class="icon icon-plus"><use xlink:href="./images/symbol-defs.svg#plus"></use></svg>
 								</button>
 								<input type="text" name="quantity" hidden>
 							</div>
@@ -169,7 +169,7 @@
 				<div class="cart-bottom">
 					<div class="clear">
 						<a href="#" class="clear-btn" role="button" rel="nofollow">
-							<svg class="icon icon-close"><use xlink:href="images/symbol-defs.svg#close"></use></svg>
+							<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#close"></use></svg>
 							<span>Очистить корзину</span>
 						</a>
 					</div>
