--- a/app/page-product.html
+++ b/app/page-product.html
@@ -188,11 +188,11 @@
 									<div class="price-quantity">
 										<div class="quantity">
 											<button type="button" class="quantity-minus btn btn-primary">
-												<svg class="icon icon-minus"><use xlink:href="images/symbol-defs.svg#minus"></use></svg>
+												<svg class="icon icon-minus"><use xlink:href="./images/symbol-defs.svg#minus"></use></svg>
 											</button>
 											<div class="quantity-amount"><div class="value">1.467</div> <div class="size">м<sup>2</sup></div></div>
 											<button type="button" class="quantity-plus btn btn-primary">
-												<svg class="icon icon-plus"><use xlink:href="images/symbol-defs.svg#plus"></use></svg>
+												<svg class="icon icon-plus"><use xlink:href="./images/symbol-defs.svg#plus"></use></svg>
 											</button>
 											<input type="text" name="quantity" hidden>
 										</div>
